@@ -12,6 +12,7 @@ Version 1.5.0:
 	Fixed bug with dropdown not being removed when the editor is destroyed.
 		- Thanks to @odungern for reporting.
 	Fixed bug with getOuterText() not always getting all the text.
+	Fixed bug with selectOuterText() not selecting text across adjacent nodes.
 
 Version 1.4.7:
 	Fixed bug with XHTML plugin not wrapping inline nodes in paragraphs.
